Добавлен отчет о покрытии тестами

--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -23,4 +23,5 @@ jobs:
 
       - name: Test with pytest
         run: |
-          python -m pytest -m without_benchmark -v tests/
+          coverage run -m pytest -m without_benchmark -v tests/
+          coverage report -im --skip-covered --omit "tests/*"
